
package nirvana.proto;

import "monad/rpc/protocol/command.proto";
option optimize_for = SPEED;

option java_package = "nirvana.hall.protocol.image";

option java_outer_classname = "ImageExportProto";

message ImageConvertToBMPRequest {
  extend monad.rpc.protocol.BaseCommand {
    optional ImageConvertToBMPRequest cmd = 10014;
  }

  required bytes image_data = 1;
}

/* response */
message ImageConvertToBMPResponse {
  extend monad.rpc.protocol.BaseCommand {
    optional ImageConvertToBMPResponse cmd = 10015;
  }
  optional bytes bmp_data = 1;
}
